...
  const val TOP_BAR = "app_top_bar"
  const val BOTTOM_BAR = "app_bottom_bar"
  const val BACK_BUTTON = "app_back_button"
  const val HOME_BUTTON = "home_button"
  const val ORDERS_BUTTON = "orders_button"
  const val TRIPS_BUTTON = "trips_button"
  const val PROFILE_BUTTON = "profile_button"
  const val REQUESTER_MODE = "requester_mode"
  const val COMMANDO_MODE = "commando_mode"
}

