<resources>
    <string name="add_items_title">Add items</string>
    <string name="add_items_sprint_two">This feature will be available in Sprint 2.</string>
</resources>
