<resources>
    <string name="trip_details_back">Back</string>
    <string name="trip_details_loading">Loading trip details</string>
    <string name="trip_details_shopping_time">Shopping time</string>
    <string name="trip_details_handoff">Handoff point</string>
    <string name="trip_details_add_items">Add items to this run</string>
    <string name="trip_details_not_found">This trip could not be found.</string>
    <string name="trip_details_error">Something went wrong while loading this trip.</string>
...
